--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodejs-mysql-helper",
-  "version": "1.0.0",
+  "name": "@iroak/nodejs-mysql-helper",
+  "version": "1.0.1",
   "description": "Helper of MySQL",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bastianmarin/nodejs-mysql-helper.git"
-},
+  },
   "author": "iroaK",
   "license": "MIT",
   "dependencies": {
